--- a/css/login.css
+++ b/css/login.css
@@ -1,3 +1,10 @@
+.dropdown{
+    margin: 20px;
+}
+select{
+    padding: 10px;
+    font-size: 16px;
+}
 .cta-button{
     display: none !important;
 }
