--- a/templates/parent/register-parent.html
+++ b/templates/parent/register-parent.html
@@ -23,7 +23,7 @@
     <link rel="manifest" href="resources/site.webmanifest">
 
     <!---------------------------CSS Linking---------------------------------------------->
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}">
     <link rel="stylesheet" href="/css/mobile.css">
     <link rel="stylesheet" href="/css/tablet.css">
     <link rel="stylesheet" href="/css/largescreen.css">
