--- a/templates/teacher/login-teacher.html
+++ b/templates/teacher/login-teacher.html
@@ -61,21 +61,20 @@
             </div>
 
             <ul class="nav-links">
-                <li ><a href="#" class="x-icon-menu"><i class="fa-solid fa-xmark fa-xl"></i></a></li>
-                <li><a href="index.html#Home">Home</a></li>
-                <li><a href="index.html#Features">Features</a></li>
-                <li><a href="index.html#About">About Us</a></li>
-                <li><a href="index.html#news">News</a></li>
-                <li><a href="index.html#resources">Resources</a></li>
-                <li><a href="index.html#faqs">FAQ's</a></li>
+                <li><a href="#" class="x-icon-menu"><i class="fa-solid fa-xmark fa-xl"></i></a></li>
+                <li><a href="{{ url_for('main.home') }}#Home">Home</a></li>
+                <li><a href="{{ url_for('main.home') }}#Features">Features</a></li>
+                <li><a href="{{ url_for('main.home') }}#About">About Us</a></li>
+                <li><a href="{{ url_for('main.home') }}#news">News</a></li>
+                <li><a href="{{ url_for('main.home') }}#resources">Resources</a></li>
+                <li><a href="{{ url_for('main.home') }}#faqs">FAQ's</a></li>
             </ul>
 
             <div class="cta-button">
-
-                <a href="/templates/login.html">
+                <a href="{{ url_for('main.login') }}">
                     <button class="login">Login</button>
                 </a>
-                <a href="/templates/register.html">
+                <a href="{{ url_for('main.register') }}">
                     <button class="register">Register</button>
                 </a>
             </div>
@@ -88,37 +87,51 @@
             <div class="login-contents">
                 <div class="login-form">
                     <h3>Sign In</h3>
-
-                    <div class="user-role-toggle">
-                        <div class="toggle">
-                            <input type="radio" id="parent" name="role" value="parent" onclick="submitToggle()">
-                            <label for="parent">Parent</label>
-                            <input type="radio" id="teacher" name="role" value="teacher" onclick="submitToggle()">
-                            <label for="teacher">Teacher</label>
-                            <input type="radio" id="student" name="role" value="student" onclick="submitToggle()" checked>
-                            <label for="student">Student</label>
-                            <span class="slider"></span>
-                        </div>
-                    </div>
-
-                    <form >
-                        <div class="fields">
-                            <label>Email</label>
-                            <input type="text" placeholder="johndoe@gmail.com">
-                        </div>
-                        <div class="fields">
-                            <label>Password</label>
-                            <input type="text">
-                        </div>
-                        <div class="links">
-                            <a href="/templates/register.html">Not Registered ?</a>
-                            <a href="">Forgot Password ?</a>
-                        </div>
-                        <div class="signin">
-                            <button>Sign In</button>
+                    <form method="POST" action="{{ url_for('main.login') }}">
+                        {{ form.hidden_tag() }}
+                    
+                        <div class="user-role-toggle">
+                            <div class="toggle">
+                                {{ form.role.label }} <!-- Display the form label -->
+                                
+                                <input type="radio" id="parent" name="role" value="parent" 
+                                        {% if form.role.data == 'parent' %} checked {% endif %} 
+                                        onclick="submitToggle()">
+                                <label for="parent">Parent</label>
+                        
+                                <input type="radio" id="teacher" name="role" value="teacher" 
+                                        {% if form.role.data == 'teacher' %} checked {% endif %}
+                                        onclick="submitToggle()">
+                                <label for="teacher">Teacher</label>
+                        
+                                <input type="radio" id="student" name="role" value="student" 
+                                        {% if form.role.data == 'student' %} checked {% endif %} 
+                                        onclick="submitToggle()">
+                                <label for="student">Student</label>
+                                <span class="slider"></span>
+                            </div>
                         </div>
                         
+                        <div class="fields">
+                            <label for="email">Email</label>
+                            {{ form.email(class_="form-control", placeholder="johndoe@gmail.com") }}
+                        </div>
+                    
+                        <div class="fields">
+                            <label for="password">Password</label>
+                            {{ form.password(class_="form-control") }}
+                        </div>
+
+                        <div class="signin">
+                            {{ form.submit(class_="btn btn-primary") }}
+                        </div>
+                    
+                        <div class="links">
+                            <a href="{{ url_for('main.register') }}">Not Registered?</a>
+                            <a href="{{ url_for('main.add_user') }}">Forgot Password?</a>
+                        </div>
                     </form>
+                    
                     <div class="line-with-text">
                         <span>Or Sign In With</span>
                     </div>
