fixed some routes.py

--- a/templates/parent/register-parent.html
+++ b/templates/parent/register-parent.html
@@ -125,14 +125,9 @@
                             <div class="form-step" id="step-2">
                                 <h2>Personal Details</h2>
                                 <div class="fields">
-                                    <label for="">First Name</label>
-                                    <input type="text" placeholder="First Name" required>
+                                    <label for="">Full Name</label>
+                                    <input type="text" placeholder="Full Name" required>
                                 </div>
-                                <div class="fields">
-                                    <label>Last Name</label>
-                                    <input type="text" placeholder="Last Name" required>
-                                </div>
-                                
                                 
                                 <div class="steps">
                                     <button type="button" onclick="prevStep()">Previous</button>
