--- a/templates/teacher/login-teacher.html
+++ b/templates/teacher/login-teacher.html
@@ -113,8 +113,8 @@
                         </div>
                         
                         <div class="fields">
-                            <label for="email">Email</label>
-                            {{ form.email(class_="form-control", placeholder="johndoe@gmail.com") }}
+                            <label for="fullname">Full Name</label>
+                            {{ form.fullname(class_="form-control", placeholder="John Doe") }}
                         </div>
                     
                         <div class="fields">
