--- a/templates/teacher/teacher.html
+++ b/templates/teacher/teacher.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teacher Dashboard</title>
-    <link href="/css/teacher.css" rel="stylesheet"> <!-- Link the CSS here -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='teacher.css') }}">
 </head>
 <body>
     <header>
